# hyperpop-bot

./: .gitignore  pyproject.toml  requirements.txt
bot/: __main__.py  config.py
bot/cogs/: __init__.py  player.py
