[tool.poetry]
name = "hyperpop"
version = "0.1.0"
description = "API for hyperpop"
authors = ["hoopengo <hoopengo@yandex.ru>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.20.0"
PyNaCl = "^1.5.0"
nextwave = "^1.5"
nextcord = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
flake8-bugbear = "^22.7.1"
mypy = "^0.971"
isort = "^5.10.1"
taskipy = "^1.10.2"

[tool.taskipy.tasks]
start = { cmd = "python -m bot", help = "run the bot" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
